--- a/gallery/index.html
+++ b/gallery/index.html
@@ -59,8 +59,8 @@
             <!---------------------------------------------->
             <div data-aos="flip-up" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="1.jpeg">
-                  <img src="1.jpeg">
+                <a class="lightbox" href="1.jpg">
+                  <img src="1.jpg">
                 </a>
               </div>
             </div>
@@ -69,8 +69,8 @@
 
             <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="2.jpeg">
-                  <img src="2.jpeg">
+                <a class="lightbox" href="2.jpg">
+                  <img src="2.jpg">
                 </a>
               </div>
             </div>
@@ -78,8 +78,8 @@
 
             <div data-aos="flip-up" data-aos-delay="40" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="3.jpeg">
-                  <img src="3.jpeg">
+                <a class="lightbox" href="3.jpg">
+                  <img src="3.jpg">
                 </a>
 
               </div>
@@ -88,8 +88,8 @@
 
             <div data-aos="flip-up" data-aos-delay="60" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="4.jpeg">
-                  <img src="4.jpeg">
+                <a class="lightbox" href="4.jpg">
+                  <img src="4.jpg">
                 </a>
               </div>
             </div>
@@ -97,8 +97,8 @@
 
             <div data-aos="flip-up" data-aos-delay="80" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="5.jpeg">
-                  <img src="5.jpeg">
+                <a class="lightbox" href="5.jpg">
+                  <img src="5.jpg">
                 </a>
               </div>
             </div>
@@ -106,8 +106,8 @@
 
             <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="6.jpeg">
-                  <img src="6.jpeg">
+                <a class="lightbox" href="6.jpg">
+                  <img src="6.jpg">
                 </a>
               </div>
             </div>
@@ -115,8 +115,8 @@
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="7.jpeg">
-                  <img src="7.jpeg">
+                <a class="lightbox" href="7.jpg">
+                  <img src="7.jpg">
                 </a>
               </div>
             </div>
@@ -124,8 +124,8 @@
 
             <div data-aos="flip-up" data-aos-delay="140" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="8.jpeg">
-                  <img src="8.jpeg">
+                <a class="lightbox" href="8.jpg">
+                  <img src="8.jpg">
                 </a>
               </div>
             </div>
@@ -133,8 +133,8 @@
 
             <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="9.jpeg">
-                  <img src="9.jpeg">
+                <a class="lightbox" href="9.jpg">
+                  <img src="9.jpg">
                 </a>
               </div>
             </div>
